return grades using nested if

--- a/Nested.html
+++ b/Nested.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
-<html>
-    <head>
+
             <script>
                 function getGrade(){
                     var marks=prompt("Enter your mark:")
@@ -8,7 +7,7 @@
          console.log("A")
     }
     else if(marks>=70 && marks<=79){
-        console.log("B");
+        console.log("B");//returns B
     }
     else if(marks>=60 && marks<=69 ){
     console.log("C");//returns C
